# DevOps-Course-Starter

./: .dockerignore  .env.test  .gitignore  .travis.yml  Dockerfile  Item.py  README.md  TodoItem.py  Vagrantfile  app.py  constants.py  gunicorn.conf.py  pyproject.toml  requirements.txt  session_items.py  trello_helper.py  view_model.py  wsgi.py
templates/: index.html  layout.html
tests/: test_e2e.py  test_integration.py  test_view.py
