[tool.poetry]
name = "devops-course-starter"
version = "0.1.0"
description = "Tim's TODO app"
authors = ["TimWoo"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "1.1.1"
python-dotenv = "0.12.0"
requests = "^2.24.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
selenium = "^3.141.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"